# refinery-procurement

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  nginx.conf
apps/admin/: .env  Cargo.toml
apps/admin/src/: main.rs
apps/admin/src/http/: kernel.rs  openapi.rs
apps/admin/src/http/controllers/: mod.rs
apps/admin/src/http/controllers/admin/: audit_controller.rs  mod.rs  supplier_controller.rs  system_controller.rs
apps/admin/src/supervisor/: mod.rs  server_task.rs
apps/auth/: .env  Cargo.toml
apps/auth/src/: main.rs
apps/auth/src/http/: kernel.rs  mod.rs  openapi.rs
apps/auth/src/http/controllers/admin/: mod.rs
apps/catalog/: .env  Cargo.toml
apps/catalog/src/: main.rs
apps/catalog/src/http/: kernel.rs  openapi.rs
apps/catalog/src/http/controllers/: catalog_controller.rs  mod.rs
apps/catalog/src/supervisor/: server_task.rs
apps/procurement/: .env  Cargo.toml
apps/procurement/src/: main.rs
apps/procurement/src/http/: kernel.rs  openapi.rs
apps/procurement/src/http/controllers/: mod.rs  procurement_controller.rs
apps/procurement/src/supervisor/: server_task.rs
apps/worker/: .env  Cargo.toml
apps/worker/src/: main.rs
apps/worker/src/supervisor/: mod.rs  rabbitmq_consumer_task.rs
libs/database/: Cargo.toml
libs/database/src/: schema.rs
libs/database/src/enums/: catalog_category.rs  mod.rs  purchase_order_status.rs  supplier_enums.rs  user_enums.rs
libs/database/src/models/: audit_log.rs  auth_session.rs  catalog_item.rs  catalog_item_compatibility.rs  mod.rs  purchase_order.rs  purchase_order_item.rs  purchase_order_status_history.rs  supplier.rs  user.rs
libs/domain/: Cargo.toml
libs/domain/src/: event.rs  lib.rs  state.rs
libs/domain/src/contracts/: event_contract.rs
libs/domain/src/dto/: audit_log_dto.rs  auth_dto.rs  catalog_dto.rs  mod.rs  purchase_order_dto.rs  supplier_dto.rs  user_dto.rs
libs/domain/src/enums/: event.rs  mod.rs
libs/domain/src/ext/: mod.rs
libs/domain/src/helpers/: auth.rs  data_loader.rs  mod.rs
libs/domain/src/http/: mod.rs  server_shared.rs
libs/domain/src/http/controllers/: auth_controller.rs
libs/domain/src/http/extractors/: mod.rs
libs/domain/src/http/middlewares/: auth_middleware.rs
libs/domain/src/macros/: mod.rs  query_builder.rs  repository.rs
libs/domain/src/repositories/: audit_log_repository.rs  auth_session_repository.rs  catalog_item_compatibility_repository.rs  catalog_item_repository.rs  mod.rs  purchase_order_item_repository.rs  purchase_order_repository.rs  purchase_order_status_history_repository.rs  supplier_repository.rs  user_repository.rs
libs/domain/src/responses/: mod.rs
libs/domain/src/services/: audit_log_service.rs  auth_service.rs  catalog_item_service.rs  catalog_service.rs  mod.rs  purchase_order_service.rs  supplier_service.rs  user_service.rs
libs/domain/src/setup/: foxtive.rs  logger.rs  mod.rs  rabbitmq.rs
resources/: openapi.yaml
resources/Next Round – Programming Assessment/: Refinery_PO_Assignment_Backend.md  Refinery_PO_Assignment_Overview_v4.md
resources/keys/: app-auth-private-key.pem  app-auth-public-key.pem  app-private-key.pem  app-public-key.pem
resources/migrations/2026-03-13-003234_create_users/: up.sql
resources/migrations/2026-03-13-003254_create_suppliers/: up.sql
resources/migrations/2026-03-13-003300_create_catalog_items/: down.sql  up.sql
resources/migrations/2026-03-13-003306_create_catalog_item_compatibility/: down.sql  up.sql
resources/migrations/2026-03-13-003316_create_purchase_orders/: up.sql
resources/migrations/2026-03-13-003324_create_purchase_order_items/: down.sql  up.sql
resources/migrations/2026-03-13-003330_create_purchase_order_status_history/: down.sql  up.sql
resources/migrations/2026-03-13-003336_create_auth_sessions/: up.sql
resources/migrations/2026-03-18-120239_add_total_cost_to_purchase_orders_table/: down.sql  up.sql
resources/migrations/20260315100000_create_audit_logs_table/: up.sql
