[package]
name = "catalog-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bigdecimal = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

foxtive = { workspace = true, features = ["rabbitmq"] }
foxtive-axum = { workspace = true }
foxtive-supervisor = { workspace = true }

domain = { path = "../../libs/domain" }
database = { path = "../../libs/database" }
