[package]
name = "worker-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bigdecimal = { workspace = true }

foxtive = { workspace = true, features = ["rabbitmq"] }
foxtive-axum = { workspace = true }
foxtive-supervisor = { workspace = true }

domain = { path = "../../libs/domain" }
database = { path = "../../libs/database" }
