[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
tracing = { workspace = true }
bigdecimal = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }
validator = { workspace = true }
diesel = { workspace = true }

axum = { workspace = true }
foxtive = { workspace = true }
foxtive-axum = { workspace = true }
foxtive-macros = { workspace = true, features = ["database"] }

utoipa = { workspace = true }

database = { path = "../database" }

